--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.container {
+.Mycontainer {
   text-align: center;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .buttons {
@@ -34,7 +37,13 @@ body {
   display: flex;
   flex-direction: column;
 }
-.btn {
+.auto-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.myBtn {
   padding: 10px 20px;
   font-size: 16px;
   color: white;
@@ -79,13 +88,15 @@ body {
   text-transform: uppercase;
 }
 .tq-div {
-  width: 200px;
+  width: 100px;
   height: 100px;
   background-color: rgb(235, 241, 178);
-
   margin: 20px auto;
   text-align: center;
   font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .toggle {
@@ -214,8 +225,8 @@ body {
 }
 
 #keyboard {
-  height: 15.25rem;
-  width: 35rem;
+  height: 17rem;
+  width: 36rem;
   margin: 0.5rem auto;
   padding: 3rem 0 0 3rem;
   position: relative;
